# joyagent

./: .env.example  CLAUDE.md  Dockerfile2  claude --dangerously-skip-permissions.txt  新建文本文档.txt  需求.docx
genie-tool/: .env  .env_template 原始  CLAUDE.md  Dockerfile  autobots.db  pyproject.toml  server.py  需求.txt
genie-tool/.claude/: settings.local.json
genie-tool/file_db_dir/aaasession-1757171165348-8650_1757171165363-7202/: 前列腺炎饮食调理指南.html
genie-tool/file_db_dir/adminsession-1758203325003-9342_1758203325012-8866/: 感冒症状、治疗方法、预防措施、最新医学研究2024年_search_result.txt  感冒症状、治疗方法、预防措施、最新医学研究2024年的搜索结果.md  感冒症状表现感冒治疗方法感冒预防感冒用药指南感冒与流感区别_search_result.txt  感冒症状表现感冒治疗方法感冒预防感冒用药指南感冒与流感区别的搜索结果.md  普通感冒症状治疗预防方法感冒用药注意事项感冒家庭护理感冒与流感区别感冒最新治疗指南_search_result.txt
genie-tool/file_db_dir/adminsession-1758204353307-2511_1758204353319-1205/: 2024年10月11月12月神经网络最新研究论文arXiv新发布深度学习突破新模型算法AI技术前沿进展_search_result.txt  2024年10月11月12月神经网络最新研究论文arXiv新发布深度学习突破新模型算法AI技术前沿进展的搜索结果.md  2024年9月-12月神经网络最新研究技术突破新架构新算法深度学习人工智能前沿进展_search_result.txt  2024年9月-12月神经网络最新研究技术突破新架构新算法深度学习人工智能前沿进展的搜索结果.md
genie-tool/file_db_dir/adminsession-1758204425656-2865_1758204425668-430/: 神经网络2024年最新技术发展趋势创新突破大模型多模态AI人工智能深度学习前沿研究的搜索结果.md  神经网络2024年最新技术发展趋势创新突破大模型多模态AI人工智能的搜索结果.md  神经网络2024年最新技术大模型GPT-4多模态AI深度学习架构创新训练优化推理加速应用场景技术突破_search_result.txt  神经网络2024年最新技术大模型GPT-4多模态AI深度学习架构创新训练优化推理加速应用场景技术突破前沿研究_search_result.txt  神经网络2024年最新技术大模型GPT-4多模态AI深度学习架构创新训练优化推理加速应用场景技术突破前沿研究最新进展_search_result.txt  (+3 more)
genie-tool/sql/: fileinfo.sql  fileinfo_mysql.sql  genie_tool.sql  main.sql
(+270 files in other folders)
