[project]
name = "python"
version = "0.1.0"
description = "Genie Tools"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    # Database dependencies
    "aiomysql>=0.2.0",
    "aiosqlite>=0.21.0",
    "pymysql>=1.1.0",
    "sqlmodel>=0.0.24",
    "greenlet>=3.2.3",
    "cryptography>=41.0.0",
    
    # Web framework dependencies
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "sse-starlette>=2.4.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
    
    # HTTP and web scraping
    "aiohttp>=3.8.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.13.4",
    
    # AI/LLM dependencies
    "litellm>=1.74.0.post1",
    "openai>=1.93.0",
    "smolagents>=1.19.0",
    
    # Data processing
    "pandas>=2.3.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.3",
    "seaborn>=0.12.0",
    
    # Utilities
    "loguru>=0.7.3",
    "json-repair>=0.47.6",
    "pyfiglet>=1.0.3",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
]
